--- a/yes.ipynb
+++ b/yes.ipynb
@@ -891,7 +891,7 @@
    ],
    "source": [
     "# Define the source location for housing data\n",
-    "data_source = 'https://raw.githubusercontent.com/pradyumna4998/Intro-to-ML/main/Housing.csv'\n",
+    "data_source = 'Housing.csv'\n",
     "\n",
     "# Load housing information into a structured format\n",
     "housing_data = pd.read_csv(data_source)\n",
@@ -1698,7 +1698,7 @@
    ],
    "source": [
     "# Define data source location for housing information\n",
-    "housing_source = 'https://raw.githubusercontent.com/pradyumna4998/Intro-to-ML/main/Housing.csv'\n",
+    "housing_source = 'Housing.csv'\n",
     "\n",
     "# Load housing dataset into pandas framework\n",
     "property_data = pd.read_csv(housing_source)\n",
