--- a/pytorch.ipynb
+++ b/pytorch.ipynb
@@ -24,6 +24,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem - 1a"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -109,6 +116,13 @@
    "source": [
     "import torch.optim as optimization_tools\n",
     "dir(optimization_tools)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem - 1b"
    ]
   },
   {
@@ -681,6 +695,13 @@
     "\n",
     "# Show temperature analysis\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem - 2"
    ]
   },
   {
@@ -1552,6 +1573,13 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Problem - 3"
    ]
   },
   {
